Source/WebCore/platform/network/curl/ResourceHandleManager.h
@@ -104,6 +104,8 @@ private:
 #endif
 };
 
+URL getCurlEffectiveURL(CURL*);
+
 }
 
 #endif
